Fix : Corrige el tipo de retorno de AlojadoController