@@ -9,6 +9,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.time.LocalDate;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -28,7 +29,7 @@ public class HabitacionController {
         var habitacionesDTO = gestorHabitacion.listarHabitaciones();
 
         if(habitacionesDTO==null || habitacionesDTO.isEmpty()){
-            return ResponseEntity.badRequest().body(List.of());
+            return ResponseEntity.ok(Collections.emptyList());
         }
 
         return ResponseEntity.ok(habitacionesDTO);
@@ -65,7 +66,7 @@ public class HabitacionController {
                 estadiaDTO.getListaInvitados() == null ||
                 estadiaDTO.getIdHabitacion() == null
         ) {
-            return ResponseEntity.badRequest().body(null);
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(estadiaDTO);
         }
 
         gestorHabitacion.ocuparHabitacion(
@@ -89,7 +90,7 @@ public class HabitacionController {
             gestorHabitacion.crearReserva(reservaDTO, listaIDHabitaciones);
         } catch (ReservaInvalidaException | HabitacionInexistenteException excepcion){
             System.out.println(excepcion.getMessage());
-            return ResponseEntity.badRequest().build();
+            return ResponseEntity.status(HttpStatus.UNPROCESSABLE_ENTITY).body(null);
         }
 
         return ResponseEntity.status(HttpStatus.CREATED).body(reservaDTO);
